Duplicated Stucco's changes & added minor refactoring